clusters/prod-cluster/infrastructure/applications/acme-dns/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-dns-api
  namespace: cert-manager
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: api
    protocol: TCP
    targetPort: api
  selector:
    app: acme-dns
---
apiVersion: v1
kind: Service
metadata:
  name: acme-dns-dns
  namespace: cert-manager
spec:
  type: ClusterIP
  ports:
  - port: 53
    name: dns
    protocol: UDP
    targetPort: dns
  - port: 53
    name: dns-tcp
    protocol: TCP
    targetPort: dns-tcp
  selector:
    app: acme-dns
---
apiVersion: v1
kind: Service
metadata:
  name: auth-numinia-xyz
  namespace: traefik
spec:
  type: ExternalName
  externalName: acme-dns-dns.cert-manager.svc.cluster.local
  ports:
  - name: dns
    port: 53
    protocol: UDP
  - name: dns-tcp
    port: 53
    protocol: TCP
